--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://josie-espiritu.github.io/Josie-Portfolio/",
+  "homepage": "https://github.com/josie-espiritu/josie-portfolio.git/",
   "name": "job--portfolio",
   "version": "0.1.0",
   "private": true,
