updated package json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://josie-espiritu.github.io/josie-portfolio/",
+  "homepage": "https://josie-espiritu.github.io/josie-portfolio",
   "name": "job--portfolio",
   "version": "0.1.0",
   "private": true,
